# python-junction

./: .mypy.ini  .readthedocs.yml  README-internal.md  README.md  pyproject.toml  pytest.ini  requirements-doc.txt  requirements.txt
.github/workflows/: ci.yml
docs/: SyncDocsToMonorepo.bat  conf.py  index.rst
docs/source/: conf.py
junction/: __init__.py  client.py  typedefs.py
tests/: conftest.py  test_booking.py  test_places.py
