[build-system]
requires = ["setuptools>=46"]
build-backend = "setuptools.build_meta"

[project]
name = "junction-sdk"
dependencies = ["aiohttp>=3.10,<4", "aiojobs>=1.3,<2"]
description = "SDK for Junction"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha"
]

[project.urls]
Homepage = "https://github.com/snowfall-travel/python-junction"
Issues = "https://github.com/snowfall-travel/python-junction/issues"

[tool.setuptools]
packages = ["junction"]

[tool.setuptools.dynamic]
version = {attr = "junction.__version__"}
